--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "apoloix",
+  "homepage": "https://github.com/mariano1997AR/apoloIXcode/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
